# fox9-smart-contracts

./: README.md
auction/: Anchor.toml  package-lock.json  package.json
auction/tests/: anchor.ts  auction_config.test.ts  bid_auction.test.ts  create_auction.test.ts  helpers.ts  values.ts
gumball/: Anchor.toml  package-lock.json
gumball/tests/: add_prizes.test.ts  create_gumball.test.ts  helpers.ts  values.ts
raffle/: Anchor.toml  package-lock.json  package.json  tsconfig.json
raffle/programs/raffle/: Cargo.toml
raffle/programs/raffle/src/: constants.rs  errors.rs  events.rs  helpers.rs  lib.rs  states.rs  utils.rs
raffle/programs/raffle/src/instructions/: activate_raffle.rs  announce_winners.rs  buy_ticket.rs  buyer_claim_prize.rs  cancel_raffle.rs  claim_amount_back.rs  claim_prize.rs  create_raffle.rs  creator_claim_prize_back.rs  mod.rs  process_raffle_config.rs  update_raffle_ticketing.rs  update_raffle_time.rs  update_raffle_winners.rs  withdraw_sol_fees.rs  withdraw_spl_fees.rs
raffle/tests/: activate_raffle.test.ts  anchor.ts  announce_winners.test.ts  buy_ticket.test.ts  cancel_raffle.test.ts  config.test.ts  create_raffle.test.ts  edge_case_winners.test.ts  helpers.ts  raffle.ts  update_raffle.test.ts  values.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-200-8bXr8kKLpepZDJTfEdS2PRyPsCpwSRN78omM4KPkfyZ5.tar.zst  snapshot-300-3yHx4AH3ToSXy33WtBrfMkZBrdhMcZ14g1Ha5MeiLQgs.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  LOG  (+5 more)
(+78 files in other folders)
